@@ -1,3 +1,10 @@
+2004-08-07  Christian Ruppert <arc@users.sf.net>
+	* uwm/placement.c, uwm/placement.h, uwm/move.c: a small bugfix in
+	  ScanScreen: modified win argument type from Window to UltimateContext
+
+2004-08-06  Christian Ruppert <arc@users.sf.net>
+	* config/urdb: added xfig resources to set canvas colors appropriately.
+
 2004-07-21  Christian Ruppert <arc@users.sf.net>
 	* ude/placement.c: Backport and some very slight modifications to
 	  make Edd Buduleas placement patch use preexisting infrastructure.
